Revision history for {{$dist->name}}

{{$NEXT}}
          the "skip" argument to AutoPrereqs can now be given multiple times

4.200008  2011-06-23 11:53:56 America/New_York
          PodVersion no longer drops the file's last newline

          listdeps now includes recommended prereqs as well as required

4.200007  2011-06-01 21:52:00 America/New_York

          always numify the version use in "use VERSION" in Makefile.PL

4.200006  2011-04-28 21:14:04 America/New_York

          MakeMaker-generated Makefile.PL now only has configure_requires of
          6.30 so dists can be installed on RHEL5

          improve consistency and options of *_TESTING env vars (Apocalypse)

          improve FileFinder-related documentation (thanks, Apocalypse)

          add a default file finder called :IncModules (thanks, Apocalypse)

          add a default file finder called :MainModule (thanks, Mateu X.
          Hunter)

          phase for named Prereqs defaults to Runtime if omitted (Jonathan Yu)

          extract the *Runner role implementations from ModuleBuild to
          Role::BuildPL (Leon Timmermans)

4.200005  2011-04-25 12:20:59 America/New_York

          provide actual name of releaser(s) in ConfirmRelease

          error message if "dzil run" is run without a command to run

          some minor refactoring in listdeps (Jon Rockway)

          listdeps can now skip already-met prereqs (Jesse Luehrs)

          authordeps now skips plugins under inc:: (Jesse Luehrs)

          authordeps now scans for "; authordep" comments

4.200004  2011-02-11 16:17:37 America/New_York

          Add Tests for Config::MVP 2.200 changes. ( Kent Fredric )

          MetaNoIndex, originally by J.T. Smith and Mark Gardner, is now
          included

4.200003  2011-02-06 21:37:45 America/New_York
          avoid test failures on systems where time zone can't be determined

4.200002  2011-02-04 18:02:16 America/New_York