@@ -3,6 +3,8 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           the "skip" argument to AutoPrereqs can now be given multiple times
 
+          authordeps now makes a rough attempt to deal with [@Filter]
+
 4.200008  2011-06-23 11:53:56 America/New_York
           PodVersion no longer drops the file's last newline
 
